add bower.json for vscode extensions

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
 	"private": true,
 	"devDependencies": {
 		"es-strip-semicolons": "^1.0.9",
-		"eslint": "3.19.0",
+		"eslint": "^3.19.0",
 		"eslint-config-react-app": "^1.0.5",
 		"eslint-loader": "^1.9.0",
 		"eslint-plugin-destructuring": "^2.1.0",
 		"eslint-plugin-es-beautifier": "^1.0.1",
-		"eslint-plugin-import": "^2.0.1",
-		"eslint-plugin-jsx-a11y": "^5.1.1",
-		"eslint-plugin-react": "^7.1.0",
+		"eslint-plugin-import": "^2.7.0",
+		"eslint-plugin-jsx-a11y": "^6.0.2",
+		"eslint-plugin-react": "^7.2.1",
 		"eslint-plugin-react-app": "^1.0.2",
 		"morgan": "^1.8.2",
 		"react-autocomplete-cli": "*",
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
-		"babel-eslint": "^7.0.0",
+		"babel-eslint": "^7.2.3",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-es2015-spread": "^6.22.0",
 		"babel-polyfill": "^6.23.0",
@@ -32,6 +32,7 @@
 		"babel-preset-react-app": "^3.0.0",
 		"babel-runtime": "^6.26.0",
 		"bluebird": "^3.5.0",
+		"eslint-plugin-flowtype": "^2.35.0",
 		"express": "^4.15.3",
 		"express-graphql": "^0.6.7",
 		"fsevents": "^1.1.2",
